See if this fixes text too small

--- a/html/ath.scss
+++ b/html/ath.scss
@@ -59,7 +59,7 @@ $navbar-font-family: "Jost" !default;
 $toc-font-family: "Jost" !default;
 $footer-font-family: "Jost" !default;
 
-// $font-size-base: 1.1rem !default; // Assumes the browser default, typically `16px`
+$font-size-base: 1.1rem !default; // Assumes the browser default, typically `16px`
 // $font-size-sm: $font-size-base * .875 !default;
 
 
@@ -663,8 +663,8 @@ pre.text, pre.sourceCode, .cell-output pre {
 
 .cv-download {
     font-family: $headings-font-family;
-    background-color: #771C6D;
-    border-color: #771C6D;
+    background-color: #00cca7;//#771C6D;//
+    border-color: #00cca7;//#771C6D;
     color: $white;
 
     &:hover {
